applied candidate 3 from pass 4